--- a/ag-style.css
+++ b/ag-style.css
@@ -7,6 +7,11 @@ html, body {
   background-color: #ffff64;
 }
 
+.container {
+  width:500px;
+  margin:50px;
+}
+
 .annotation-genius span:hover {
   cursor: pointer;
   background-color: lightblue;
@@ -33,10 +38,6 @@ html, body {
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
-}
-
-#close-annotation-sidebar {
-
 }
 
 span.original {
